# autonomous_systems

./: README.md
EKF_localization/: CMakeLists.txt  package.xml  setup.py
bagfiles/: bag_move_straight_2018-12-02-11-39-12.bag  bag_turn_and_move_straight_2018-12-02-11-44-20.bag  bag_without_map_2018-12-02-11-36-06.bag  distraction.bag  move_straight_get_kidnapped_2018-12-02-11-47-15.bag  room1_curved.bag  room1_straightline_2.bag  roroom1_straightline.bag
ekf_localization/: CMakeLists.txt  package.xml  setup.py
ekf_localization/ros/doc/: README.md
ekf_localization/ros/launch/: ekf_localization.launch
ekf_localization/ros/map/: 8floor_edited.pgm  8floor_edited.yaml  good_enough_map_for_now.yaml  map_with_edits_rotated.pgm  map_with_edits_rotated.yaml  room1_edited.pgm
ekf_localization/ros/scripts/: ekf_localization_node  laser_tf_broadcaster.py
ekf_localization/ros/src/ekf_localization_ros/: ekf_localization_node.py  laser_tf_broadcaster.py  test_map_service.py
kalman_filter/: Kalman_Filter.py  Ray Tracer.py  kalman_daniel.py  kalman_daniel_own_numbers.py
maps/: 8floor.pgm  good_enough_map_for_now.pgm  map_with_edits.yaml  room1.pgm  room1.yaml  room1_edited.pgm  room1_edited.yaml
matfiles/: ground_truth1.mat  ground_truth2.mat  ground_truth3.mat  ground_truth4.mat  hall_straight.mat  hall_straight_151_rays.mat  hall_straight_301_rays.mat  hall_straight_3_rays.mat  hall_straight_51_rays.mat  hall_straight_7_rays.mat  hall_straight_9_rays.mat  hall_straight_good_initial_belief.mat  map_with_edits.pgm  matfile_bag_move_straight.mat  matplotter.py  test.mat  (+10 more)
(+3 files in other folders)
