<?xml version="1.0"?>
<package>
 <name>ekf_localization</name>
 <version>1.0.0</version>
 <description>
 TODO!
 </description>

 <license>GPLv3</license>

 <author email="author.email@tecnico.ulisboa.pt">Author Name</author>
 <maintainer email="maintainer.name@tecnico.ulisboa.pt">Maintainer Name</maintainer>

 <buildtool_depend>catkin</buildtool_depend>

 <build_depend>roscpp</build_depend>
 <build_depend>rospy</build_depend>
 <build_depend>nav_msgs</build_depend>
 <build_depend>sensor_msgs</build_depend>
 <build_depend>geometry_msgs</build_depend>
 <build_depend>tf</build_depend>

 <run_depend>roscpp</run_depend>
 <run_depend>rospy</run_depend>
 <run_depend>nav_msgs</run_depend>
 <run_depend>geometry_msgs</run_depend>
 <run_depend>sensor_msgs</run_depend>
 <run_depend>tf</run_depend>

</package>
